<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InventoryListInsertFragment">


    <TextView
        android:id="@+id/inv_list_name_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inv_list_name_tv_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        tools:layout_editor_absoluteX="0dp"></TextView>

    <EditText
        android:id="@+id/inv_list_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inv_list_et_hint_lbl"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inv_list_name_lbl"
        app:layout_constraintVertical_bias="0.0"></EditText>

    <Button
        android:id="@+id/find_btn_inv_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/inv_list_insert_find_btn_marginBottom"
        android:text="@string/inv_item_find_barcode_btn_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toEndOf="@+id/barcode_insert_item_tv"
        app:layout_constraintTop_toBottomOf="@+id/inv_list_name_et"
        app:layout_constraintVertical_bias="1.0" />

    <AutoCompleteTextView
        android:id="@+id/barcode_insert_item_tv"
        android:layout_width="@dimen/asset_insert_imageview_height_width"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/auto_complete_tv_width"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inv_list_name_et"
        app:layout_constraintVertical_bias="0.495" />

    <Button
        android:id="@+id/scan_barcode_inv_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/inv_list_insert_scan_btn_marginBottom"
        android:text="@string/asset_barcode_btn_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/inv_list_save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/inv_list_insert_save_btn_marginBottom"
        android:text="@string/inv_item_save_btn_lbl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scan_barcode_inv_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>