<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/location_item_padding">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/location_item_layout_margin"
        app:cardCornerRadius="@dimen/location_item_card_corner_radius"
        app:cardElevation="@dimen/asset_insert_card_elev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
      >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!-- ImageView -->
            <ImageView
                android:id="@+id/asset_insert_imageView"
                android:layout_width="@dimen/asset_insert_imageview_height_width"
                android:layout_height="@dimen/asset_insert_imageview_height_width"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/location_item_padding"
                android:contentDescription="Image" />

            <!-- Action Button -->
            <Button
                android:id="@+id/insert_capture_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asset_add_pic_lbl"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/location_item_padding" />

            <!-- GridLayout for other fields -->
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:rowCount="6"
                android:padding="@dimen/location_item_padding">

                <!-- Name -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_name_lbl"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:padding="@dimen/location_item_layout_margin" />

                <EditText
                    android:layout_width="@dimen/asset_rec_item_textview_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/location_item_layout_margin"
                    android:id="@+id/asset_insert_name_et" />

                <!-- Description -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_desc_lbl"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:padding="@dimen/location_item_layout_margin" />

                <EditText
                    android:layout_width="@dimen/asset_rec_item_textview_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="1"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/location_item_layout_margin"
                    android:id="@+id/asset_insert_desc_et" />

                <!-- Employee -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_employee_lbl"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:padding="@dimen/location_item_layout_margin" />

                <AutoCompleteTextView
                    android:layout_width="@dimen/asset_rec_item_textview_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="2"
                    android:layout_columnWeight="1"
                    android:id="@+id/asset_insert_tv_employee"
                    android:padding="@dimen/location_item_layout_margin"
                    />

                <!-- Location -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_location_lbl"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:padding="@dimen/location_item_layout_margin" />

                <AutoCompleteTextView

                    android:layout_width="@dimen/asset_rec_item_textview_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="3"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/location_item_layout_margin"
                    android:id="@+id/asset_insert_tv_location" />

                <!-- Barcode -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_barcode_lbl"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:padding="@dimen/location_item_layout_margin" />

                <LinearLayout
                    android:layout_width="@dimen/asset_rec_item_textview_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="4"
                    android:layout_columnWeight="1"
                    android:orientation="horizontal">

                    <EditText
                        android:layout_width="@dimen/asset_rec_item_textview_layout_width"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/asset_insert_barcode_et" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asset_barcode_btn_lbl"
                        android:id="@+id/asset_insert_barcode_scan_btn" />
                </LinearLayout>

                <!-- Price -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asset_price_lbl"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:padding="@dimen/location_item_layout_margin" />

                <EditText
                    android:layout_width="@dimen/asset_rec_item_textview_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_row="5"
                    android:layout_columnWeight="1"
                    android:padding="@dimen/location_item_layout_margin"
                    android:id="@+id/asset_insert_price_et" />
            </GridLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/btn_insert_asset"
        android:layout_width="@dimen/asset_insert_imageview_height_width"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"

        android:text="@string/asset_insert_btn_lbl"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>
